Stdlib tree shaking, import resolution, and consistent getter/setter codegen
- Tree-shake Python stdlib: only copy modules actually used by the app
- Fix Java import resolution: zinc.* imports now resolve via TargetRuntime
  (e.g. zinc.http → java.net.http.*)
- Fix TargetRuntime null values in Map.ofEntries (latent NPE on first use)
- Add PythonStdlibMapping: declarative Math/static-call mappings replace
  hardcoded cases, new Math functions need zero code changes
- Remove pip fallback: uv is bundled, it's the only Python runtime path
- Generate getFoo()/setFoo() methods in Python backend instead of @property
  decorators — matches Java backend, eliminates getter mapping heuristic
- Add imports.zn e2e test (both backends), import unit tests
- Bump default requires-python to >=3.14

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>